# SMRP

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  THREAT_MODEL.md  deny.toml
.github/workflows/: ci.yml
docs/: SPEC.md  STATE_MACHINE.md
proto/python/: requirements.txt
proto/python/smrp/: __init__.py  crypto.py  packet.py  session.py
smrp-cli/: Cargo.toml
smrp-cli/src/: main.rs
smrp-core/: Cargo.toml
smrp-core/examples/: client.rs  server.rs
smrp-core/fuzz/: Cargo.toml
smrp-core/fuzz/fuzz_targets/: fuzz_hello_payload.rs  fuzz_packet_parse.rs  fuzz_replay_window.rs
smrp-core/src/: config.rs  conn.rs  constants.rs  crypto.rs  error.rs  handshake.rs  lib.rs  metrics.rs  packet.rs  replay.rs  session.rs  transport.rs
smrp-core/tests/: vectors.rs
smrp-server/: Cargo.toml
smrp-server/src/: main.rs
