[workspace]
resolver = "2"
members = [
    "smrp-core",
    "smrp-server",
    "smrp-cli",
]
exclude = [
    "smrp-core/fuzz",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
repository  = "https://github.com/SQSamir/smrp"
keywords    = ["protocol", "encryption", "udp", "networking", "security"]
categories  = ["network-programming", "cryptography"]

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = true

[profile.release-dbg]
inherits      = "release"
debug         = true
strip         = false
