[package]
name        = "smrp-core"
description = "Core library for SMRP — Secure Minimal Reliable Protocol (crypto, handshake, transport, high-level API)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
keywords.workspace   = true
categories.workspace = true

[dependencies]
ring       = "0.17"
thiserror  = "1"
bytes      = "1"
tokio      = { version = "1", features = ["full"] }
tracing    = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio              = { version = "1", features = ["full", "test-util"] }
hex                = "0.4"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
